base/src/test/resources/failure/patterns/unexpected-end-pat.aya.txt
In file $FILE:2:4 ->

  1 | def test(i: I): I
  2 |   | 3 => 0
          ^^
  3 |   | 4 => 1

Error: The point `3` does not live in interval
note: Did you mean:  `0` or `1`

In file $FILE:3:4 ->

  1 | def test(i: I): I
  2 |   | 3 => 0
  3 |   | 4 => 1
          ^^

Error: The point `4` does not live in interval
note: Did you mean:  `0` or `1`

2 error(s), 0 warning(s).
What are you doing?
